WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22483
Assertion failure in CachedResource::makePurgeable during layout tests
https://bugs.webkit.org/show_bug.cgi?id=22483
Summary
Assertion failure in CachedResource::makePurgeable during layout tests
Alexey Proskuryakov
Reported
2008-11-25 02:21:59 PST
run-webkit-tests http An assertion fails between tests, not resulting in any reported failure: Thread 0 Crashed: 0 com.apple.WebCore 0x0339ca0b WTF::RefCountedBase::hasOneRef() const + 71 (RefCounted.h:42) 1 com.apple.WebCore 0x033c1adc WebCore::CachedResource::makePurgeable(bool) + 282 (CachedResource.cpp:334) 2 com.apple.WebCore 0x033bcf5c WebCore::CachedImage::destroyDecodedData() + 178 (CachedImage.cpp:328) 3 com.apple.WebCore 0x033b5fed WebCore::Cache::pruneDeadResources() + 725 (Cache.cpp:348) 4 com.apple.WebCore 0x033baefd WebCore::Cache::prune() + 85 (Cache.h:128) 5 com.apple.WebCore 0x033b640a WebCore::Cache::setCapacities(unsigned int, unsigned int, unsigned int) + 196 (Cache.cpp:393) 6 com.apple.WebKit 0x008d41bf +[WebView(WebFileInternal) _setCacheModel:] + 1719 (WebView.mm:4494) 7 com.apple.WebKit 0x0084dd50 +[WebCache empty] + 84 (WebCache.mm:89) 8 com.apple.WebKit 0x00853d75 +[WebCoreStatistics emptyCache] + 43 (WebCoreStatistics.mm:158) 9 DumpRenderTree 0x000072ce main + 142 (DumpRenderTree.mm:547) 10 DumpRenderTree 0x000030ae start + 54
Attachments
patch
(1.36 KB, patch)
2008-11-25 14:30 PST
,
Antti Koivisto
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2008-11-25 14:30:02 PST
Created
attachment 25505
[details]
patch
Antti Koivisto
Comment 2
2008-11-25 14:47:18 PST
Sending WebCore/ChangeLog Sending WebCore/loader/CachedImage.cpp Transmitting file data .. Committed revision 38761.
Antti Koivisto
Comment 3
2008-11-25 14:48:05 PST
Comment on
attachment 25505
[details]
patch bdash reviewed this
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug