2008-11-25  Antti Koivisto  <antti@apple.com>

Reviewed by Mark Rowe.

        Fix https://bugs.webkit.org/show_bug.cgi?id=22483
        Assertion failure in CachedResource::makePurgeable during layout tests

        Deleting SVG image can re-enter destroyDecodedData.

        * loader/CachedImage.cpp:
        (WebCore::CachedImage::destroyDecodedData):



Canonical link: https://commits.webkit.org/30969@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@38761 268f45cc-cd09-0410-ab3c-d52691b4dbfc